--- a/galaxy/index.html
+++ b/galaxy/index.html
@@ -4,74 +4,162 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galaxy</title>
+
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+
 </head>
 <body>
     <div class="wrap">
         <!-- header -->
         <div class="header">
             <div class="container">
-                <div class="logo"></div>
-                <ul class="gnb"></ul>
-                <div class="cart"></div>
+                <div class="logo"><a href="#"><img src="./images/logo.png" alt="."></a></div>
+                <ul class="gnb">
+                    <li><a href="#">홈</a></li>
+                    <li><a href="#">스마트폰</a></li>
+                    <li><a href="#">워치</a></li>
+                    <li><a href="#">테블릿</a></li>
+                    <li><a href="#">버즈</a></li>
+                    <li><a href="#">기타</a></li>
+                </ul>
+                <div class="cart">
+                    <i class="xi-cart-o"></i>
+                    <span class="count">2</span>
+                </div>
             </div>    
         </div>
 
         <!-- slider -->
-        <div class="sldier">
+        <div class="slider">
             <div class="container">
-                <div class="slides">
-                    <div class="slide">
+                <div class="slide">
+                    <div class="text_box">
+                        <h2>Galaxy tab7 <b>5G</b><br>런칭 이벤트</h2>
+                        <div class="btns">
+                            <a href="#" class="btn">자세히보기</a>
+                            <a href="#" class="btn filled">구매혜택 보기</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- section-1 -->
-        <div class="banner">
-            <div class="container">
-                <div class="item"></div>
-                <div class="item"></div>
+        <div class="container">
+            <div class="banner">
+                <div class="item">
+                    <div class="photo"><img src="./images/watch-ov.png" alt=""></div>
+                    <div class="text_box">
+                        <h3>Watch</h3>
+                        <p>보다 완벽해진 스마트 헬스케어 위치</p>
+                        <div class="btn">
+                            <a href="#" class="small">자세히 보기</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="photo"><img src="./images/buds.png" alt=""></div>
+                    <div class="text_box">
+                        <h3>Buds</h3>
+                        <p>처음 만나는 갤럭시 오픈형 무선 이어폰</p>
+                        <div class="btn">
+                            <a href="#" class="small">자세히 보기</a>
+                        </div>
+                    </div>    
+                </div>
             </div>
         </div>
 
         <!-- section-2 -->
-        <div class="section2">
-            <div class="titles"></div>
-            <ul class="items">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+        <div class="container">
+            <div class="section2">
+                <div class="titles">
+                    <h2>또 다른 Galaxy를 만나보세요</h2>
+                    <p>당신에게 꼭 맞는 갤럭시는?</p>
+                </div>
+                <ul class="items">
+                    <li>
+                        <img src="./images/watch.png" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/note.png" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/buds.png" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/note-ov.png" alt="">
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <!-- big_banner -->
         <div class="big_banner">
-            <div class="texts"></div>
+            <div class="container">
+                <div class="text_box">
+                    <h2>갤럭시 핏</h2>
+                    <p>수면, 심박수, 스트레스 등 다양한 데이터를 쉽게 확인하고 파워풀 배터리로 걱정없이 오래 착용 할 수 있습니다.</p>
+                    <a href="#">구매혜택보기</a>
+                </div>
+            </div>
         </div>
 
         <!-- section-3 -->
-        <div class="section3">
-            <div class="titles">
+        <div class="container">
+            <div class="section3">
+                <div class="titles">
+                    <h2>찾고있는 Galaxy가 있나요?</h2>
+                    <p>당신에게 꼭 맞는 갤럭시는?</p>
+                </div>
                 <ul class="items">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>
+                        <img src="./images/watch.png" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/buds.png" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/note.png" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/note-ov.png" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/buds-ov.png" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/note-ov.png" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/watch-ov.png" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/buds.png" alt="">
+                    </li>
                 </ul>
             </div>
         </div>
 
         <!-- blog -->
-        <div class="blog">
-            <div class="titles">
+        <div class="container">
+            <div class="blog">
+                <div class="titles">
+                    <h2>5G와  함께하는 삶</h2>
+                    <p>당신의 삶을 변화시킬 5G</p>
+                </div>
                 <ul class="items">
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>
+                        <img src="./images/5g_1.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/5g_2.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/5g_3.jpg" alt="">
+                    </li>
                 </ul>
             </div>
         </div>
@@ -80,13 +168,54 @@
         <div class="footer">
             <div class="container">
                 <div class="contents">
-                    <div class="f_info"></div>
-                    <ul class="f_menu"></ul>
+                    <div class="f_info">
+                        <div class="f_logo"><img src="./images/1200px-Samsung_Galaxy_Logo2 1.png" alt=""></div>
+                    </div>
+                    <div class="text">우리가 제공하는 앱을 다운로드 해 보세요.<br>갤럭시의 새로운 소식을 빠르고 간편하게 확인 할 수 있습니다.</div>
+                    <div class="btns">
+                        <a href="#"><img src="./images/app_store.png" alt=""></a>
+                        <a href="#"><img src="./images/play_store.png" alt=""></a>
+                    </div>
+                    <div class="sns">
+                        <a href="#"><i class="xi-instagram"></i></a>
+                        <a href="#"><i class="xi-facebook"></i></a>
+                        <a href="#"><i class="xi-twitter"></i></a>
+                    </div>
+                    <ul class="f_menu">
+                        <li>
+                            <a href="#">기업정보</a>
+                            <ul>
+                                <li><a href="#">회사소개</a></li>
+                                <li><a href="#">기업정보</a></li>
+                                <li><a href="#">제품 접근성</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">고객문의</a>
+                            <ul>
+                                <li><a href="#">서비스 센터 찾기</a></li>
+                                <li><a href="#">디지털프라자</a></li>
+                                <li><a href="#">이메일 상담</a></li>
+                                <li><a href="#">FAQ</a></li>
+                            </ul>
+                        </li>    
+                        <li>
+                            <a href="#">제품소개</a>
+                            <ul>
+                                <li><a href="#">스마트폰</a></li>
+                                <li><a href="#">테블릿</a></li>
+                                <li><a href="#">워치</a></li>
+                                <li><a href="#">버즈</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
-                <div class="copyright"></div>
+
+                <div class="copyright">
+                    Copyright © 2020 Galaxy All Rights Reserved.
+                </div>
             </div>
         </div>
-
     </div>
     
 </body>
