오늘 컨디션이 진짜 안좋네 죽겟다아아아아.....

--- a/연습 copy/index.html
+++ b/연습 copy/index.html
@@ -65,14 +65,12 @@
                 <div class="item">
                     <div class="photo">
                         <img class="img1" src="./images/buds.png" alt="">
-                        <img class="img2" src="./images/buds.png" alt="">
+                        <img class="img2" src="./images/buds-ov.png" alt="">
                     </div>
                     <div class="text_box">
                         <h3>Buds</h3>
                         <p>처음 만나는 갤럭시 오픈형 무선 이어폰</p>
-                        <div class="btn">
-                            <a href="#" class="small">자세히 보기</a>
-                        </div>
+                        <a href="#" class="btn small">자세히 보기</a>
                     </div>    
                 </div>
             </div>
@@ -112,9 +110,7 @@
                 <div class="text_box">
                     <h2>갤럭시 핏</h2>
                     <p>수면, 심박수, 스트레스 등 다양한 데이터를 쉽게 확인하고 파워풀 배터리로 걱정없이 오래 착용 할 수 있습니다.</p>
-                    <div class="btn white">
-                        <a href="#" class="white">구매혜택보기</a>
-                    </div>
+                    <a href="#" class="btn white">구매혜택보기</a>
                 </div>
             </div>
         </div>
@@ -180,20 +176,20 @@
         <div class="footer">
             <div class="container">
                 <div class="contents">
-                    <div class="f_info">
-                        <div class="f_logo"><img src="./images/1200px-Samsung_Galaxy_Logo2 1.png" alt=""></div>
+                    <div class="footer_info">
+                        <div class="f_logo"><img src="./images/logo.png" alt=""></div>
+                        <div class="text">우리가 제공하는 앱을 다운로드 해 보세요.<br>갤러시의 새로운 소식을 빠르고 간편하게 확인 할 수 있습니다.</div>
+                        <div class="btns">
+                            <a href="#"><img src="./images/app_store.png" alt=""></a>
+                            <a href="#"><img src="./images/google_store.png" alt=""></a>
+                        </div>
+                        <div class="sns">
+                            <a href="#"><i class="xi-instagram"></i></a>
+                            <a href="#"><i class="xi-facebook"></i></a>
+                            <a href="#"><i class="xi-twitter"></i></a>
+                        </div>
                     </div>
-                    <div class="text">우리가 제공하는 앱을 다운로드 해 보세요.<br>갤럭시의 새로운 소식을 빠르고 간편하게 확인 할 수 있습니다.</div>
-                    <div class="btns">
-                        <a href="#"><img src="./images/app_store.png" alt=""></a>
-                        <a href="#"><img src="./images/play_store.png" alt=""></a>
-                    </div>
-                    <div class="sns">
-                        <a href="#"><i class="xi-instagram"></i></a>
-                        <a href="#"><i class="xi-facebook"></i></a>
-                        <a href="#"><i class="xi-twitter"></i></a>
-                    </div>
-                    <ul class="f_menu">
+                    <ul class="footer_menu">
                         <li>
                             <a href="#">기업정보</a>
                             <ul>
@@ -210,12 +206,12 @@
                                 <li><a href="#">이메일 상담</a></li>
                                 <li><a href="#">FAQ</a></li>
                             </ul>
-                        </li>    
+                        </li>
                         <li>
                             <a href="#">제품소개</a>
                             <ul>
                                 <li><a href="#">스마트폰</a></li>
-                                <li><a href="#">테블릿</a></li>
+                                <li><a href="#">태블릿</a></li>
                                 <li><a href="#">워치</a></li>
                                 <li><a href="#">버즈</a></li>
                             </ul>
@@ -223,9 +219,7 @@
                     </ul>
                 </div>
 
-                <div class="copyright">
-                    Copyright © 2020 Galaxy All Rights Reserved.
-                </div>
+                <div class="copyright">Copyright © 2020 Galaxy All Rights Reserved.</div>
             </div>
         </div>
     </div>
